{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Player Input",
            "id": "79dfca61-3a54-4f09-a097-09e3c1d2f186",
            "actions": [
                {
                    "name": "MouseButtons",
                    "type": "Button",
                    "id": "b89ecb4b-e9b2-4382-88ae-83a6f31dc393",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f9914297-0eab-45d0-97de-cf0450db9faa",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseButtons",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}